package edu.hitsz.Game;

public class easyGame extends Game{
    public easyGame()
    {
        super();
    }

    @Override
    protected void generateBoss(){}


}
